# AI-PR-Reviewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  config.example.yaml  vcpkg.json
include/ai_pr_reviewer/: ai_analyzer.h  config.h  diff_parser.h  github_client.h  html_report.h  types.h
src/: ai_analyzer.cpp  config.cpp  diff_parser.cpp  github_client.cpp  html_report.cpp  main.cpp
templates/: report.html
tests/: test_ai_analyzer.cpp  test_config.cpp  test_diff_parser.cpp  test_github_client.cpp
